# advent-of-code

./: .gitignore  .mise.toml  Gemfile  LICENSE  Makefile  README.md  go.mod  gum.sh  hotreload.py  pyproject.toml  run.sh  setup.sh
.zellij/: go.kdl  js.kdl  layout.kdl  py.kdl  rb.kdl
2023/1/: main.go  main.py
2023/10/: main.go
2023/2/: main.go  main.py  sample.txt
2023/3/: main.go  sample.txt
2023/4/: main.go  sample.txt
2023/5/: main.go
2023/6/: main.go
2023/7/: main.go
2023/8/: main.go
2023/9/: main.go
2024/1/: main.py
2024/10/: main.py
2024/11/: main.py
2024/12/: main.py
2024/13/: main.py
2024/14/: main.py
2024/15/: main.py
2024/2/: main.py
2024/3/: main.py
2024/4/: main.py
2024/5/: main.py
2024/6/: main.py
2024/7/: main.py
2024/8/: main.py
2024/9/: main.py  sample.txt
2025/1/: main.rb
2025/2/: main.rb
2025/3/: main.rb
templates/: main.go  main.js  main.py  main.rb
