[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "My attempts for AoC"
authors = ["Alankrit <alankritjoshi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
